# ansible-role-docker-swarm-cluster

./: .gitignore  .prettierignore  .yamllint  .yamllint.yaml  README.md  pyproject.toml
.github/workflows/: build.yaml  test.yaml
defaults/: main.yaml  main.yml
handlers/: main.yml
meta/: main.yaml  main.yml
molecule/default/: converge.yml  molecule.yml  requirements.yml  verify.yml
molecule/gcp/: converge.yml  create.yml  destroy.yml  molecule.yml  requirements.yml
molecule/gcp/tasks/: create_compute.yaml  destroy_compute.yaml
tasks/: main.yaml  main.yml
tests/: test.yml
vars/: main.yml
