# Python configuration file for building, dependencies, and tooling.
#
# For more information, visit
# https://snarky.ca/what-the-heck-is-pyproject-toml/.

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 80

[tool.poetry]
authors = ["Macklan Weinstein <wolfgangwazzlestrauss@gmail.com>"]
description = "Personal workspace for learning Ansible testing with Molecule"
homepage = "https://gitlab.com/wolfgangwazzlestrauss/learn-molecule"
keywords = []
license = "MIT"
name = "learn-molecule"
readme = "README.md"
version = "0.0.1"

[tool.poetry.dependencies]
python = "^3.7.0"

[tool.poetry.dev-dependencies]
ansible = "^4.8.0"
ansible-lint = "^5.2.1"
molecule = {extras = ["lint", "docker", "vagrant"], version = "^3.5.2"}
molecule-vagrant = "^1.0.0"
pdbpp = "^0.10.3"
python-vagrant = "^0.5.15"
pywinrm = "^0.4.2"
yamllint = "^1.26.3"
