# Python configuration file for building, dependencies, and tooling.
#
# For more information, visit
# https://snarky.ca/what-the-heck-is-pyproject-toml/.

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 80

[tool.poetry]
authors = ["Macklan Weinstein <macklan.weinstein@gmail.com>"]
description = "Personal workspace for learning Ansible testing with Molecule"
homepage = "https://github.com/scruffaluff/ansible-role-docker-swarm-cluster"
keywords = []
license = "MIT"
name = "docker-swarm-cluster"
readme = "README.md"
version = "0.0.1"

[tool.poetry.dependencies]
python = "^3.7.0"

[tool.poetry.dev-dependencies]
ansible = "^4.8.0"
# Ansible-compat 1.0.0 does not work with Molecule. Its runtime.py's function
# prepare_environment has a install_local default variable which is set to
# False. This prevents Molecule from creating a symlink to the repository in
# order to install the role.
ansible-compat = "^0.5.0"
ansible-lint = "^5.2.1"
molecule = {extras = ["lint", "docker", "vagrant"], version = "^3.5.2"}
molecule-vagrant = "^1.0.0"
pdbpp = "^0.10.3"
python-vagrant = "^0.5.15"
pywinrm = "^0.4.2"
yamllint = "^1.26.3"
